// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon CheckIcon It should render. 1`] = `
<div>
  <svg
    class="Icon"
    viewBox="0 0 12 12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2.5 6.5l2.5 3 4.5-6"
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
    />
  </svg>
</div>
`;

exports[`Icon XIcon It should render. 1`] = `
<div>
  <svg
    class="Icon"
    viewBox="0 0 12 12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M3 3l6 6M3 9l6-6"
      stroke="currentColor"
      stroke-linecap="round"
    />
  </svg>
</div>
`;
